Parte visual da página e pequenas alterações

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Pixels Art</title>
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
   </div>
+  <hr>
+  <h2>Opções de cores:</h2>
   <section id="color-palette">
     <button class="color"></button>
     <button class="color"></button>
@@ -17,10 +22,11 @@
   <h3>Escolha o tamanho de sua tela!</h3>
   <h4>Por padrão a tela tem 5x5 de tamanho, mas caso deseje uma tela maior, digite o tamanho abaixo:</h4>
   <h5>Obs: tamanho mínimo 5 e máximo 50</h5>
-  <div>
-  <input type="number" min="1" max="50" id="board-size" placeholder="Novo tamanho entre 5 e 50">
-  <button id="generate-board">VQV</button><br>
+  <div id="size-container">
+    <input type="number" min="1" max="50" id="board-size" placeholder="Novo tamanho entre 5 e 50">
+    <button id="generate-board">VQV</button><br>
     <button id="clear-board">Limpar</button>
+  </div>
     <div id="pixel-board" class="nda">
     </div>
     <script src="script.js"></script>
