--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="color" id="blue"></div>
         <div class="color" id="yellow"></div>
   </section>
-  <Matrix id="pixel-board">
-  </Matrix>
+  <matrix id="pixel-board">
+  </matrix>
   </main>
   <script type="text/javascript" src="script.js"></script>
 </body>
