--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </section>
 
     <section class="board-config">
-      <input type="button" value="Limpar" id="clear-board">
-      <input type="number" min="1" max="50" id="board-size" placeholder="Tamanho do quadro">
-      <input type="button" value="VQV" id="generate-board">
+      <button id="clear-board">Limpar</button>
+      <input type="number" id="board-size" min="1" max="50">
+      <button id="generate-board">VQV</button>
     </section>
 
     <section id="pixel-board">
