--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title></title>
+<meta name="viewport" content="width=device-width"/>
+<title>Project Pixels Art</title>
 <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
@@ -11,48 +11,12 @@
 <h1 id="title">Paleta de Cores</h1>
 </header>
 <div id="color-palette">
-<div id="black" class="color selected"></div>
+<div id="black" class="color"></div>
 <div id="red" class="color"></div>
 <div id="blue" class="color"></div>
 <div id="purple" class="color"></div>
 </div>
-<div id="pixel-board">
-<div class="line">
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-</div>
-<div class="line">
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-</div>
-<div class="line">
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-</div>
-<div class="line">
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-</div>
-<div class="line">
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-<div class="pixel"></div>
-</div>
-</div>
+<div id="pixel-board"></div>
 <script src="script.js"></script>
 </body>
 </html>
