--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <section id="color-palette">
+    <section id='color-palette'>
         <div id='black' class="color selected"></div>
         <div id='yellow' class="color"></div>
         <div id='green' class="color"></div>
