--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
   <h1 id="title">Paleta de Cores</h1>
   <section id="color-palette">
     <div class="color black"></div>
