--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette"></div>
   <button id="clear-board">Limpar</button>
+  <div id="div-area">
+    <button id="generate-board">VQV</button>
+    <input id="board-size">
+  </div>  
   <div id="pixel-board"></div>
   <script src="script.js"></script>
 </body>
