--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+  <br>
   <main>
   <section id="color-palette">
         <div class="color" id="black"></div> 
@@ -17,8 +18,9 @@
         <div class="color" id="blue"></div>
         <div class="color" id="yellow"></div>
   </section>
-  <matrix id="pixel-board">
-  </matrix>
+  <br>
+  <section id="pixel-board">
+  </section>
   </main>
   <script type="text/javascript" src="script.js"></script>
 </body>
