--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <main>
+    <section>
       <div id="color-palette">
-        <div id="colorBlack" class="color"></div>
+        <div id="colorBlack" class="color selected"></div>
         <div id="colorRed" class="color"></div>
         <div id="colorYellow" class="color"></div>
         <div id="colorGreen" class="color"></div>
       </div>
+    </section>
+
+    <section>
+      <div id="pixel-board"></div>
+    </section>
   </main>
-  
+  <script src="script.js"></script>
 </body>
 </html>
