--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <br>
   <main>
   <section id="color-palette">
-        <div class="color" id="black"></div> 
+        <div class="color" id="black" class= "selected"></div> 
         <div class="color" id="red"></div>
         <div class="color" id="blue"></div>
         <div class="color" id="yellow"></div>
