--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1 id="title">Paleta de Cores</h1>
         <section id="color-palette">
-            <div class="color color1"></div>
+            <div class="color color1 selected"></div>
             <div class="color color2"></div>
             <div class="color color3"></div>
             <div class="color color4"></div>
