--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <section id='color-palette'>
-        <div id='black' class="color selected"></div>
-        <div id='yellow' class="color"></div>
-        <div id='green' class="color"></div>
-        <div id='blue' class="color"></div>
+        <div id='color1' class="color selected"></div>
+        <div id='color2' class="color"></div>
+        <div id='color3' class="color"></div>
+        <div id='color4' class="color"></div>
     </section>
+    <div id="clear-board">Limpar</div>
     <section id="pixel-board">
-
     </section>
     <script src="script.js"></script>
 </body>
