--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
 
 </head>
 <body>
-  <header>
+  <header id="header">
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <main class="main">
     <div id="color-palette">
     </div>
     
-    <div id="pixel-board">
-    </div>
-    
-
-
   </main>
 
   <footer></footer>
