--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
   <section id="select-color">
     <ul id="color-palette">
-      <li class="color" id="bk"></li>
-      <li class="color" id="g"></li>
-      <li class="color" id="b"></li>
-      <li class="color" id="r"></li>
+      <li class="color" id="black"></li>
+      <li class="color" id="green"></li>
+      <li class="color" id="blue"></li>
+      <li class="color" id="red"></li>
     </ul>
     <ul>
   </section>
