--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       <li class="color" id="blue"></li>
       <li class="color" id="red"></li>
     </ul>
-    <ul>
   </section>
-  </div>
+  <section class="button-container">
+    <button id="clear-board"> Limpa </button>
+  </section>
   <main>
     <div id="pixel-board">
       <div class="pixel"></div>
@@ -55,10 +56,7 @@
   </main>
   <script src=" script.js">
   </script>
-  <main>
 
-    </li>
-  </main>
 </body>
 
 </html>
