concertando erros de sintaxe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
   </section>
   <section class="button-container">
-    <button id="clear-board"> Limpa </button>
+    <button id="clear-board"> Limpar </button>
   </section>
   <main>
     <div id="pixel-board">
