--- a/index.html
+++ b/index.html
@@ -20,49 +20,14 @@
         <li class="color"></li>
         <li class="color"></li>
     </ul>
+    
     <section id="id-button-resetar"></section>
+    <section id="input-location"></section>
+    
     <section id="pixel-board">
-        <ul>
-            <li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </li>
-            <li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </li>
-
-            <li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </li>
-
-            <li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </li>
-
-            <li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-                <li class="pixel"></li>
-            </li>
-        </ul>
+        <ul id="ulLocal"></ul>
     </section>
+
 </body>
 <script src="script.js"></script>
 
