--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <h1 id="title">Paleta de Cores</h1>
   <main>
     <div id="color-palette">
-      <div id="paletablack" class="color"></div>
-      <div id="paletared" class="color"></div>
-      <div id="paletagreen" class="color"></div>
-      <div id="paletablue" class="color"></div>
+      <div style="background-color: black;"class="color"></div>
+      <div style="background-color:red;"class="color"></div>
+      <div style="background-color:green;"class="color"></div>
+      <div style="background-color:blue;"class="color"></div>
     </div>
-
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board"></div>
   
   </main>
