--- a/index.html
+++ b/index.html
@@ -20,3 +20,16 @@
   <script src="script.js"></script>
 </body>
 </html>
+<!-- 
+<select aria-label="Tamanho da Paleta" name="birthday_day" id="day" title="Dia" class="_9407 _5dba _9hk6 _8esg">
+  <option value="0">Tamanho da Paleta</option>
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+  <option value="4">4</option>
+  <option value="5">5</option>
+  <option value="6">6</option>
+  <option value="7">7</option>
+  <option value="8">8</option>
+  <option value="9">9</option>
+</select> -->
