requisito 9 npm test ok

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div class="color" id="yellow"></div>
   </section>
   <br>
+  <button id="clear-board">Limpar</button>
+  <br>
   <section id="pixel-board">
   </section>
   </main>
