Implementando os requisitos 7 e 8

--- a/index.html
+++ b/index.html
@@ -3,49 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <link rel="javascript" href="script.js">
-    <title>Document</title>
+    <title>Projeto Pixel Art</title>
 </head>
 <body>
-    <br>
-    <br>
     <h1 id='title'>Paleta de Cores</h1>
-    
     <div id='color-palette'>
-
-        <div id = 'black' class='color selected'></div>
-        <div id = 'blue' class='color'></div>
-        <div id = 'red' class='color'></div>
-        <div id = 'yellow' class='color'></div>
-
+        <div id='black' class='color'></div>
+        <div id='pink'class='color'></div>
+        <div id='green' class='color'></div>
+        <div id='vine' class='color'></div>
     </div>
 
-    <div id="pixel-board">
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
-        <div class='pixel'></div>
+    <div id='pixel-board'>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
     </div>
+    
 </body>
+    <script src="script.js"></script>
 </html>
