--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
         <div id='pink'class='color'></div>
         <div id='green' class='color'></div>
         <div id='vine' class='color'></div>
+
+        
     </div>
 
+    <div id='button-position'>
+        <button id="clear-board">Limpar</button>
+    </div>
+       
     <div id='pixel-board'>
         <div class="pixel"></div>
         <div class="pixel"></div>
