--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
     <section id="color-palette"> 
     
-        <div id='black' class=' color width-and-height'> </div>
-        <div  id='green' class='color width-and-height'> </div>
-        <div  id='blue' class='color width-and-height'> </div>
-        <div  id='purple' class='color width-and-height'> </div>
+        <div id='black' class=' color'> </div>
+        <div  id='green' class='color'> </div>
+        <div  id='blue' class='color'> </div>
+        <div  id='purple' class='color'> </div>
 
     </section>
     <main>
