--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class='color' id='c3'></div>
             <div class='color' id='c4'></div>
             </div>
-        <div id='pixel-board'>
-            <div onloaded="addClassSelected()" class='pixel'></div>
+        <div id='pixel-board' >
+            <div class='pixel'></div>
             <div class='pixel'></div>
             <div class='pixel'></div>
             <div class='pixel'></div>
