adiciona estilizacao para a pagina, paleta de cores, campo de entrada e botoes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap" rel="stylesheet">
   <title>Pixels Art</title>
 </head>
 <body>
@@ -18,11 +21,11 @@
       <div class="color"></div>
       <div class="color"></div>
     </div>
-
-    <input type="number" id="board-size" min="1">
-    <button id="generate-board">VQV</button>
-    <button id="clear-board">Limpar</button>
-
+    <div id="pixel-board-interactions">
+      <input type="number" id="board-size" min="1" placeholder="Tamanho do quadro">
+      <button id="generate-board">VQV</button>
+      <button id="clear-board">Limpar</button>
+    </div>
     <div id="pixel-board"></div>
   </main>
   <script src="script.js"></script>
