--- a/index.html
+++ b/index.html
@@ -8,11 +8,52 @@
   </head>
   <body>
     <h1 id="title">"Paleta de Cores"</h1>
-    <div id = "color-palette">
-      <div class = "color black"></div>
-      <div class = "color red"></div>
-      <div class = "color blue"></div>
-      <div class = "color green"></div>
+    <div id="color-palette">
+      <div class="color black"></div>
+      <div class="color red"></div>
+      <div class="color blue"></div>
+      <div class="color green"></div>
+    </div>
+    <div id="pixel-board">
+      <div class="pixels-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="pixels-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="pixels-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="pixels-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="pixels-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <!-- <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div> -->
     </div>
   </body>
 </html>
