--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Pixels Art</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="script.js"></script>
   </head>
   <body>
     <header>
@@ -19,5 +18,14 @@
       <div class="color"></div>
       <div class="color"></div>
     </section>
+
+    <div id="pixel-board">
+      <div class="linhaPixel"></div>
+      <div class="linhaPixel"></div>
+      <div class="linhaPixel"></div>
+      <div class="linhaPixel"></div>
+      <div class="linhaPixel"></div>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
