--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="color-palette">
-    <li class="color" id="black"></li>
+    <li class="color selected" id="black"></li>
     <li class="color" id="red"></li>
     <li class="color" id="green"></li>
     <li class="color" id="blue"></li>
