--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <h1 id='title'>Paleta de Cores</h1>
     <div id='color-palette'></div>
-    
+    <div id='pixel-board'></div>
    
     <script src='script.js'></script>
   </body>
+
 </html>
