--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li id="red" class="color"></li>
       </ul>
     </section>
+    <div class="reset-button">
+      <button id="clear-board" type="button">Limpar</button>
+    </div>
     <div id="pixel-container">
       <section id="pixel-board"></section>
     </div>
