--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div id="color-3" class='color'></div>
         <div id="color-4" class='color'></div>
     </div>
+    <div id="clear-board-container">
+      <button id="clear-board" type="reset" value="Reset">Limpar</button>
+    </div>
     <div id="pixel-board-container">
       <div id="pixel-board">
         <div class="line">
@@ -62,5 +65,5 @@
       </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
