--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section id="color-palette">
-      <div class="color"></div>
+      <div class="color selected"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
