--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     
     <div id="color-palette">
         <div class="color" id="black"></div>
-        <div class="color" id="red"></div>
+        <div class="color teste" id="red"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
     </div>
     
     <div id='pixel-board'>
-        <div class="pixel" id="colunas"></div>
+        <div class="pixel" id="coluna"></div>
         <div class="pixel" id="colunas"></div>
         <div class="pixel" id="colunas"></div>
         <div class="pixel" id="colunas"></div>
