--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <h1 id="title">Paleta de Cores</h1>
   
     <ul id="color-palette">
-      <li class="color"></li>
-      <li class="color"></li>
-      <li class="color"></li>
-      <li class="color"></li>
+      <li id="first-li" class="color selected"></li>
+      <li id="second-li" class="color"></li>
+      <li id="third-li" class="color"></li>
+      <li id="fourth-li" class="color"></li>
     </ul>
-    
+
   </main>
   <script src="./script.js"></script>
 </body>
