--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <div class="color"></div>
   </div>
 
-  <div id="container-button"></div>
+  <div id="container-button">
+    <button id="clear-board">Limpar</button>
+    <input type="number" min="1" id="board-size">
+    <button id='generate-board'>VQV</button>
+  </div>
   
   <div id="container-board">
     <div id="pixel-board"></div>
