--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="color" id="blue"></div>
     </div>
     
+    <button id="clear-board">Limpar</button>
+
     <div id='pixel-board'>
         <div class="pixel" id="coluna"></div>
         <div class="pixel" id="colunas"></div>
@@ -53,7 +55,8 @@
         <div class="pixel" id="colunas"></div>
     </div>
    
-   
+    
+
     <!-- <div id="pixel-board">
 
     </div> -->
