--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette">
-    <div class="color" id="preto"></div>
+    <div class="color selected" id="preto"></div>
     <div class="color" id="cinza"></div>
     <div class="color" id="vermelho"></div>
     <div class="color" id="roxo"></div>
+    </section>
+    <section id="pixel-board">  
     </section>
     <script src="script.js"></script>
     </body>
