segundo e terceiro  reguisitos projeto

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paleta de Cores</title>
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
-    <h1 id=title>"Paleta de Cores".</h1>
+    <header>
+        <h1 id=title>"Paleta de Cores".</h1>
+    </header>
     
+    <section id=color-palette>
+            <div class="color" id="black"></div>
+            <div class="color" id="red"></div> 
+            <div class="color" id="blue"></div>
+            <div class="color" id="green"></div>
+    </section>
+
+    <section id="pixel-board">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+    </section>
 </body>
 </html>
