quarto, quinto e sexto reguisitos projeto

--- a/index.html
+++ b/index.html
@@ -14,18 +14,47 @@
     </header>
     
     <section id=color-palette>
-            <div class="color" id="black"></div>
+            <div class="color selected" id="black"></div>
             <div class="color" id="red"></div> 
             <div class="color" id="blue"></div>
             <div class="color" id="green"></div>
     </section>
 
     <section id="pixel-board">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
     </section>
+    <section id="pixel-board">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+    </section>
+    <section id="pixel-board">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+    </section>
+    <section id="pixel-board">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+    </section>
+    <section id="pixel-board">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+</section>
+
 </body>
 </html>
