--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
   <title>Pixels Art World</title>
 </head>
 <body>
-  <main>
+  <!-- <main> -->
     <h1 id="title">Paleta de Cores</h1>
+    <section class="align">
     <div id="color-palette">
       <button class="color black selected"></button>
       <button class="color red"></button>
       <button class="color green"></button>
       <button class="color blue"></button>
     </div>
-  </main>
+      <div id="pixel-board"></div>
+    </section>
+  <!-- </main> -->
   <script src="script.js"></script>
 </body>
 </html>
