--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
   <title>Project Pixels Art</title>
 </head>
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
+  <header id="container-title"></header>
   <main>
     <section>
-      <div id="color-palette">
-        <div id="colorBlack" class="color selected"></div>
-        <div id="colorRed" class="color"></div>
-        <div id="colorYellow" class="color"></div>
-        <div id="colorGreen" class="color"></div>
-      </div>
+      <div id="color-palette"></div>
     </section>
-
     <section>
       <div id="pixel-board"></div>
+    </section>
+    <section class="btn-clear">
     </section>
   </main>
   <script src="script.js"></script>
