--- a/index.html
+++ b/index.html
@@ -15,33 +15,13 @@
 		<div class="blue color"></div>
 		<div class="orange color"></div>
 	</section>
-	<button id="clear-board">Limpar</button>
+	<div id="interact">
+		<button id="clear-board">Limpar</button>
+		<input type="number" id="board-size" min="1">
+		<button id="generate-board">VQV</button>
+	</div>
 	<section id="pixel-board">
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
-		<div class="pixel"></div>
+		
 	</section>
 
 	<script src="script.js"></script>
