--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-      <div class="color colorBlack"></div>
-      <div class="color colorBlue" ></div>
-      <div class="color colorRed"></div>
-      <div class="color colorGreen"></div>
+      <div id="colorBlack" class="color"></div>
+      <div id="colorBlue" class="color" ></div>
+      <div id="colorRed" class="color"></div>
+      <div id="colorGreen" class="color"></div>
     </div>
+
+    <div id="button-create"></div>
 
     <div id="pixel-board">
       <div class="pixel"></div>
