--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
-    </section>
+    </section class="clean">
       <div id='pixel-board' class="container"></div>
 
   </main>
