--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <div id="color-3" class='color'></div>
         <div id="color-4" class='color'></div>
     </div>
+    <div id="input-container">
+      <input id="board-size" type="number" min="5" max="50" placeholder="Tamanhos entre 5 e 50">
+      <button id="generate-board" type="submit">VQV</button>
+    </div>
     <div id="clear-board-container">
       <button id="clear-board" type="reset" value="Reset">Limpar</button>
     </div>
