--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <body>
   <header>
     <h1 id="title">"Paleta de Cores"</h1>
-
   </header>
   <main>
-
     <section id="color-palette">
       <div class="color selected"></div>
       <div class="color"></div>
       <div class="color"></div>
       <div class="color"></div>
     </section class="clean">
+    <div class="clear-board"></div>
       <div id='pixel-board' class="container"></div>
 
   </main>
