--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
   <h1 id="title">Paleta de Cores</h1>
 
   <div id="color-palette">
-    <!-- <ul></ul>
-      <li class="name-colors">Black</li>
-      <li class="name-colors">Siena Raw</li>
-      <li class="name-colors">Lambreta</li>
-      <li class="name-colors">Tibre</li> -->
   
     <div>
       <div class="color selected"  id="color1" ></div>
@@ -24,6 +19,8 @@
       <div class="color" id="color4"></div>
     </div>
   </div>
+
+  <button id="clear-board">Limpar</button>
 
   <div id="pixel-board"></div>
     <div class="line">
