--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<h1 id="title">Paleta de Cores</h1>
 	<section id="color-palette">
 		<div class="black color selected"></div>
-		<div class="red color"></div>
+		<div class="color red"></div>
 		<div class="blue color"></div>
 		<div class="orange color"></div>
 	</section>
