--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   <title>Pixels Art World</title>
 </head>
 <body>
-  <!-- <main> -->
     <h1 id="title">Paleta de Cores</h1>
     <section class="align">
     <div id="color-palette">
-      <button class="color black selected"></button>
-      <button class="color red"></button>
-      <button class="color green"></button>
-      <button class="color blue"></button>
+      <button class="color selected" id="black"></button>
+      <button class="color" id="red"></button>
+      <button class="color" id="green"></button>
+      <button class="color" id="blue"></button>
     </div>
       <div id="pixel-board"></div>
     </section>
-  <!-- </main> -->
   <script src="script.js"></script>
 </body>
 </html>
