--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <!-- paleta  -->
     <div id="color-palette-container">
       <div id="color-palette">
-        <div id="color-1" class='color selected'></div>
-        <div id="color-2" class='color'></div>
-        <div id="color-3" class='color'></div>
-        <div id="color-4" class='color'></div>
+        <div class='color selected' id="initial-color"></div>
+        <div class='color'></div>
+        <div class='color'></div>
+        <div class='color'></div>
     </div>
     <div id="input-container">
-      <input id="board-size" type="number" min="5" max="50" placeholder="Tamanhos entre 5 e 50">
+      <input id="board-size" type="number" min="1" max="50" placeholder="Tamanhos entre 5 e 50">
       <button id="generate-board" type="submit">VQV</button>
     </div>
     <div id="clear-board-container">
