--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
  </header>
  <main>
    <ul id="color-palette">
-     <li id="palettOne" class="color squareSize selected"></li>
-     <li id="palettTwo"  class="color squareSize"</li>
-     <li id="palettThree"  class="color squareSize"></li>
-     <li id="palettFour"  class="color squareSize"></li>
+     <li style="background-color: black;" id="palettOne" class="color squareSize selected"></li>
+     <li style="background-color: green;" id="palettTwo"  class="color squareSize"</li>
+     <li style="background-color: red;" id="palettThree"  class="color squareSize"></li>
+     <li style="background-color: yellow;" id="palettFour"  class="color squareSize"></li>
    </ul>
+   <button id="clear-board">Limpar</button>
    <section id="pixel-board">
       <div class="line">
         <div class="pixel"></div>
