--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <header>
     <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <div id="container">
+        <ul id="color-palette">
+            <li class="color red"></li>
+            <li class="color blue"></li>
+            <li class="color green"></li>
+            <li class="color black"></li>
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
