--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <div id = color-palette>
-      <button class="color selected" id='black'>
+      <button class="color" id='black'>
 
       </button>
       <button class="color" id='red'>
@@ -24,8 +24,15 @@
       </button>
       <button class="color" id='green'>
       </button>
-   </div>
-   <div id="pixel-board"></div>
+   </div >
+    <div id='size-changer'>
+      Digite a altura desejada
+        <input type="number" id='height-changer' value="">
+      Digite a largura desejada
+        <input type="number" id='width-changer' value="">
+        <input type="submit" id='submit'>
+    </div>
+    <div id="pixel-board"></div>
   </main>
   <script src="script.js"></script>
 </body>
