formatacao do codigo e finalizacao da funcionalidade apagar antiga board

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <div class="color green"></div>
       </div>
 
-      <button id="clear-board">Limpar</button>
+      <div>
+        <button id="clear-board">Limpar</button>
+        <input type="number" min="1" max="50" value="insira o numero de colunas">
+        <button id="generate-board">VQV</button>
+      </div>
 
       <div id="pixel-board"> 
       </div>
