--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     aceitar numero positivos pelo site:
     https://www.ti-enxame.com/pt/html/como-tornar-type-number-apenas-para-numeros-positivos/1041901479/-->
 
-  <input type="number" min="1" step="1" id="board-size" placeholder="numero entre 5 e 50" maxlength="2" size="13" > 
+  <input type="number" min="1" step="1" id="board-size" placeholder="numero entre 5 e 50" > 
 
   <button type="button" id="generate-board">VQV</button>
 
