--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Project Pixels Art</title>
 </head>
 <body>
-  <main>
     
     <h1 id="title">Paleta de Cores</h1>
   
@@ -19,7 +18,8 @@
       <li id="fourth-li" class="color"></li>
     </ul>
 
-  </main>
+    <button id="clear">limpar</button>
+
   <script src="./script.js"></script>
 </body>
 </html>
