--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
       </button>
    </div >
     <div id='size-changer'>
-      Digite a altura desejada
-        <input type="number" id='height-changer' value="">
-      Digite a largura desejada
-        <input type="number" id='width-changer' value="">
-        <input type="submit" id='submit'>
+      Digite o tamanho desejado
+        <input type="number" id='board-size' value="0" min="0" max="50">
+        <input type="submit" id='generate-board' value='VQV'>
     </div>
     <div id="pixel-board"></div>
   </main>
