altera backgorund para backgorundColor na questao 9

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
       <h1 id="title">Paleta de Cores</h1>
+      <section>
       <div id="color-palette"></div>
       <div id="pixel-board"></div>
+      </section>
   </body>
    <script src = "script.js"></script>
 </html>
