--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>Pixel-Art</title>
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
-    <section id="color-palette">
-        <div id="preto" class="color preto"></div>
-        <div id="laranja" class="color marrom"></div>
-        <div id="marrom" class="color laranja"></div>
-        <div id="verde-claro" class="color verde-claro"></div>
-    </section>
-    <section id="pixel-board">
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+        <section id="color-palette">
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+        </section>
+        <input type="button" value="Clear Board" id="clear-board">
+        </header>
+        <section id="pixel-board">
         <div class="line-pixel"></div>
         <div class="line-pixel"></div>
         <div class="line-pixel"></div>
