deixando o js mais organizado com function

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <div class="color" id="yellow"></div>
   </section>
   <br>
+  <input id="board-size" type="number" min="1">
+  <button id="generate-board">VQV</button>
+  <br>
   <button id="clear-board">Limpar</button>
   <br>
   <section id="pixel-board">
