--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <div id="color-palette">
     </div>
   </section>
+  <section id="clear-button">
+  </section>
   <section id="board">
   </section>
 </main>
