--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
       </button>
       <button class="color" id='green'>
       </button>
+    
    </div >
     <div id='size-changer'>
       Digite o tamanho desejado
         <input type="number" id='board-size' value="0" min="0" max="50">
-        <input type="submit" id='generate-board' value='VQV' onclick="generator()">
+        <input type="submit" id='generate-board' value='VQV'>
     </div>
-    <div id="pixel-board"></div>
     <div id="clear-board"><input type="button" value="RESET" onclick="resetColor()"></div>
+    <div id="pixel-board"></div>
+    
   </main>
   <script src="script.js"></script>
 </body>
