--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
    </div >
     <div id='size-changer'>
       Digite o tamanho desejado
-        <input type="number" id='board-size' value="0" min="0" max="50">
+        <input type="number" id='board-size' value="0" min="1" max="50">
         <input type="submit" id='generate-board' value='VQV'>
     </div>
-    <div id="clear-board"><input type="button" value="RESET" onclick="resetColor()"></div>
+    <div id="clear-board"><input type="button" value="Limpar" onclick="resetColor()" ></div>
     <div id="pixel-board"></div>
-    
   </main>
   <script src="script.js"></script>
 </body>
