--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <section>
       <div id="color-palette"></div>
     </section>
+    <section class="btn-clear">
+      <button id="clear-board">Limpar</button>
+    </section>
     <section>
       <div id="pixel-board"></div>
-    </section>
-    <section class="btn-clear">
     </section>
   </main>
   <script src="script.js"></script>
