--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
       </button>
       <button class="color" id='green'>
       </button>
-    
    </div >
     <div id='size-changer'>
       Digite o tamanho desejado
         <input type="number" id='board-size' value="0" min="1" max="50">
-        <input type="submit" id='generate-board' value='VQV'>
+        <input type="button" id='generate-board' value='VQV'>
     </div>
     <div id="clear-board"><input type="button" value="Limpar" onclick="resetColor()" ></div>
     <div id="pixel-board"></div>
