All challenges done! Even though there is a mistake in the testes.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <div class="color"></div>
       <div class="color"></div>
     </section class="clean">
-    <div class="clear-board"></div>
+    <div class="btns">
+      <div class="clear-board"></div>
+      <div class="input">
+      </div>
+    </div>
       <div id='pixel-board' class="container"></div>
 
   </main>
