--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button class="color" id="green"></button>
       <button class="color" id="blue"></button>
     </div>
+    <section><button id="clear-board">Limpar</button></section>
       <div id="pixel-board"></div>
     </section>
   <script src="script.js"></script>
