--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <section id="color-palette">
         <div class="color selected" id="black"></div> 
         <div class="color" id="red"></div>
+        <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
-        <div class="color" id="yellow"></div>
   </section>
   <br>
   <input id="board-size" type="number" min="1">
