--- a/index.html
+++ b/index.html
@@ -10,26 +10,34 @@
 <body>
   <header> 
     <h1 id="title"> Paleta de Cores</h1> 
-  </header>
+ 
   <nav class="color-pallete">
     <div id="color-palette">
 <!-- color plate -->
     <div style="background-color: black;" class="color selected"></div>
-    <div style="background-color: red;" class="color"></div>
-    <div style="background-color: blue;" class="color"></div>
-    <div style="background-color: green;" class="color"></div>
+    <div style="background-color: red;" class="color randomColor"></div>
+    <div style="background-color: blue;" class="color randomColor"></div>
+    <div style="background-color: green;" class="color randomColor"></div>
     </div>
-<!-- <form action="">
-      <input type="text" id="gridSize" name="name" placeholder="informe o numero de colunas">
-      <input type="submit" value="Enviar">
-</form> -->
-    </nav>
-  <main>
-    <section id="menis">
-      
-    </section>
-    <section id='pixel-board'>
+  </header>
 
+    </nav>
+
+  <main>
+    <form action="">
+      <div id="inputs">
+      
+      </div>
+      <div id="menis">
+
+      </div>
+</form>
+    <section id='pixel-board'>
+      <!-- 
+gradecimento aos amisgos/colegas/pessoas alunas da Trybe @luizWanderson @AirtonLopes
+
+outOfTrybe: https://developer.mozilla.org/en-US/   
+    -->
     </section>
 </main>
 <script src="./script.js" > 
