add functions rmvGrid, newGrid, maxNum, numImput and makeImputSize

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ outOfTrybe: https://developer.mozilla.org/en-US/
     -->
     </section>
 </main>
+
+<footer>
+  <div class="fotter"></div>
+</footer>
 <script src="./script.js" > 
 </script>
 </body>
