--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li id="fourth-li" class="color"></li>
     </ul>
 
-    <button id="clear">limpar</button>
+    <button id="clear-board">Limpar</button>
 
   <script src="./script.js"></script>
 </body>
