--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color selected" style="background-color: black;"></div>
+        <div class="color" style="background-color: black;"></div>
         <div class="color" style="background-color: yellow;"></div>
         <div class="color" style="background-color: red"></div>
         <div class="color" style="background-color: green;"></div>
