--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </section>
 
       <div id="pixel-board">
-        <div class="pixel-board-container">
+        <div>
             <div class="pixel"></div>
             <div class="pixel"></div>
             <div class="pixel"></div>
