requesito bonus randomColor, correcao lint

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="color"></div>
             <div class="color"></div>
         </section>
-        <input type="button" value="Clear Board" id="clear-board">
+        <input type="button" value="Limpar" id="clear-board">
         </header>
         <section id="pixel-board">
         <div class="line-pixel"></div>
